k8s/backend-deployement.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: attendance-app
spec:
  replicas: 2                 # 2 replicas — load balanced automatically
  selector:
    matchLabels:
      app: backend
  strategy:
    type: RollingUpdate       # zero downtime updates
    rollingUpdate:
      maxSurge: 1             # spin up 1 extra during update
      maxUnavailable: 0       # never kill old pod until new one is ready
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: sachinbhandari/classroom-attendance-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
          readinessProbe:
            httpGet:
              path: /health    # change to your actual health endpoint
              port: 8081
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 8081
            initialDelaySeconds: 60
            periodSeconds: 20
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
