k8s/mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: attendance-app
spec:
  replicas: 1           # always 1 for MySQL
  selector:
    matchLabels:
      app: mysql
  strategy:
    type: Recreate      # Recreate for DB — never rolling update a DB
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql
          image: mysql:8.4
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-storage
              mountPath: /var/lib/mysql
          readinessProbe:
            exec:
              command:
                - mysqladmin
                - ping
                - -h
                - localhost
                - -u
                - db_user
                - -pdb_password
                - --silent
            initialDelaySeconds: 20
            periodSeconds: 10
            failureThreshold: 12
          livenessProbe:
            exec:
              command:
                - mysqladmin
                - ping
                - -h
                - localhost
                - -u
                - db_user
                - -pdb_password
                - --silent
            initialDelaySeconds: 60
            periodSeconds: 20
      volumes:
        - name: mysql-storage
          persistentVolumeClaim:
            claimName: mysql-pvc
