k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: attendance-app
spec:
  selector:
    app: backend
  ports:
    - port: 8081
      targetPort: 8081
  type: ClusterIP     # internal only — ingress handles external access
